Modificaciones a proveedores y categorias necesarias para la carga de productos